# MAVSDK

./: CMakeLists.txt
examples/mavsdk_control/: CMakeLists.txt  mavsdk_control.cpp
